Fix h1 text alignment in Style.css

--- a/Code/Style.css
+++ b/Code/Style.css
@@ -24,6 +24,9 @@
     #FFD6E7  100px, #FFD6E7  120px
   ) 1;
 }
+h1{
+    text-align:center;
+}
 p{
     font-size: 20px;
     text-align: center;
